--- a/content/posts/ps/samsung-codetest-protein-cpp.mdx
+++ b/content/posts/ps/samsung-codetest-protein-cpp.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🏅 SAMSUNG 모의고사 : 단백질 사냥꾼 (C++)'
+title: '삼성 모의고사 : 단백질 사냥꾼 (C++)'
 summary: '삼성 모의고사 : 단백질 사냥꾼 문제를 C++로 풀이한 내용입니다.'
 date: 2022-11-08 14:58:00
 tags: [알고리즘]
@@ -7,7 +7,7 @@ tags: [알고리즘]
 
 ## 문제
 
-자신의 몸이 허약하다고 생각한 정택은 강해지기위해 운동을 하기 시작했다. 알고리즘 피트니스 센터의 센터장인 종민의 조언에 따라 “먹는 것 까지 운동이다.” 라는 철칙을 잘 따르고 있다. 전날 무리하게 운동한 여파로 늦잠을 자게되어, 오늘 먹을 단백질 도시락을 챙길 여유가 없었다. 어제 무리하게 운동한 것이 아까운 정택은 사무실 근처에 있는 편의점을 돌며 얻을 수 있는 최대의 단백질을 확보하려고 한다. 같은 단백질 함양을 가진 제품은 동일한 제품이고, 같은 도시락을 여러 번 먹으면 질리기때문에 서로 다른 제품을 통해 단백질을 섭취하고자 한다. 힘이 상승하고자하는 정택은 편의점을 ‘+’ 모양으로 순회하려고 한다.
+자신의 몸이 허약하다고 생각한 정택은 강해지기위해 운동을 하기 시작했다. 알고리즘 피트니스 센터의 센터장인 종민의 조언에 따라 “먹는 것 까지 운동이다.” 라는 철칙을 잘 따르고 있다. 전날 무리하게 운동한 여파로 늦잠을 자게되어, 오늘 먹을 단백질 도시락을 챙길 여유가 없었다. 어제 무리하게 운동한 것이 아까운 정택은 사무실 근처에 있는 편의점을 돌며 얻을 수 있는 최대의 단백질을 확보하려고 한다. 같은 단백질 함량을 가진 제품은 동일한 제품이고, 같은 도시락을 여러 번 먹으면 질리기때문에 서로 다른 제품을 통해 단백질을 섭취하고자 한다. 힘이 상승하고자하는 정택은 편의점을 ‘+’ 모양으로 순회하려고 한다.
 
 ![protein1.png](/assets/posts/ps/samsung-codetest/protein/01.jpg)  
 ![protein2.png](/assets/posts/ps/samsung-codetest/protein/02.jpg)
@@ -103,9 +103,9 @@ tags: [알고리즘]
 
 문제에서 제시된 조건을 정리해보면 아래와 같다.
 
-1. `같은 단백질 함양을 가진 제품은 동일한 제품이고, 같은 도시락을 여러 번 먹으면 질리기때문에 서로 다른 제품을 통해 단백질을 섭취하고자 한다.`
+1. `같은 단백질 함량을 가진 제품은 동일한 제품이고, 같은 도시락을 여러 번 먹으면 질리기때문에 서로 다른 제품을 통해 단백질을 섭취하고자 한다.`
 
-   - 선택된 편의점(칸)의 단백질 함양(값) 중 같은 것은 제외하고 합산해야 한다.
+   - 선택된 편의점(칸)의 단백질 함량(값) 중 같은 것은 제외하고 합산해야 한다.
 
 2. `정택은 편의점을 ‘+’ 모양으로 순회하려고 한다.`
 
@@ -157,7 +157,7 @@ int test(){
     }
   }
 
-  //테스트 케이스의 편의점 정보를 순회하며 최대의 단백질 함양을 구하기
+  //테스트 케이스의 편의점 정보를 순회하며 최대의 단백질 함량을 구하기
   int temp[n + n], current, max = -1;
   for(int i = 1; i < n - 1; ++i){ //첫 줄과 마지막 줄은 제외
     for(int j = 1; j < n - 1; ++j){ //첫 줄과 마지막 줄은 제외
